# sdl2-glew-template

./: CMakeLists.txt  main.cpp
